--- a/notebook/document.ipynb
+++ b/notebook/document.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "71aae967",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3ca3e233",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
     "doc=Document(\n",
     "    page_content=\"this is it\",\n",
     "    metadata={\n",
-    "        \"source\":\"exaple.txt\",\n",
+    "        \"source\":\"example.txt\",\n",
     "        \"pages\":1,\n",
     "        \"author\": \"krisj naik\",\n",
     "    }\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "90c82da7",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d1deaded",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "df18f316",
    "metadata": {},
    "outputs": [
@@ -115,22 +115,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e538ea20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': '..\\\\data\\\\text_files\\\\python_intro.txt'}, page_content='\\n\\n    Python is a high-level, interpreted programming language created by Guido van Rossum and first released in 1991. Named after the comedy troupe Monty Python, rather than the reptile, it was designed with a core philosophy emphasizing code readability and simplicity, often summarized in The Zen of Python.\\n\\nIt is a multi-paradigm language, supporting object-oriented, procedural, and functional programming styles. A defining technical characteristic is its use of significant whitespace for indentation rather than curly braces, which forces a clean, standardized visual structure. Python is dynamically typed and features an automatic garbage collection system for memory management.\\n\\nToday, it is the worlds most popular language according to the TIOBE Index, primarily due to its dominance in Machine Learning, Data Science, and Artificial Intelligence, supported by powerful libraries like TensorFlow, PyTorch, and Scikit-learn. Its vast ecosystem includes the Python Package Index (PyPI), which hosts over 500,000 projects. From powering the backend of Instagram and Netflix to controlling scientific instruments at NASA, Python serves as the glue language of modern computing, balancing ease of use with the industrial-grade power required for complex RAG pipelines and scalable web applications.\\n\\n')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Directory Loader\n",
     "from langchain_community.document_loaders import DirectoryLoader\n",
     "\n",
     "##load all the text files from the directory\n",
     "dir_loader=DirectoryLoader(\n",
-    "    \"data/text_files\",\n",
+    "    \"../data/text_files\",\n",
     "    glob=\"**/*.txt\", ##pattern to match files\n",
     "    loader_cls = TextLoader,\n",
     "    loader_kwargs={'encoding': 'utf-8'},\n",
-    "    show_progress=True\n",
-    ")\n"
+    "    show_progress=False \n",
+    ")\n",
+    "\n",
+    "documents=dir_loader.load()\n",
+    "documents\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce7caf51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import PyMuPDFLoader\n",
+    "\n",
+    "from langchain_community.document_loaders import DirectoryLoader\n",
+    "\n",
+    "##load all the text files from the directory\n",
+    "dir_loader=DirectoryLoader(\n",
+    "    \"../data/pdf\",\n",
+    "    glob=\"**/*.pdf\", ##pattern to match files\n",
+    "    loader_cls = PyMuPDFLoader,\n",
+    "    show_progress=False \n",
+    ")\n",
+    "\n",
+    "pdf_documents = dir_loader.load()\n",
+    "pdf_documents\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7af529e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "langchain_core.documents.base.Document"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(pdf_documents[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "567f0a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_community.document_loaders.csv_loader import CSVLoader\n",
+    "\n",
+    "from langchain_community.document_loaders import DirectoryLoader\n",
+    "loader = DirectoryLoader(\"../data/csv\",\n",
+    "                   glob=\"**/*.csv\",\n",
+    "                    loader_cls= CSVLoader,\n",
+    "                     show_progress=False )\n",
+    "csv_docs = loader.load();\n",
+    "csv_docs"
    ]
   }
  ],
